--- a/myprojectdetail.html
+++ b/myprojectdetail.html
@@ -32,7 +32,7 @@
         <div class="containerMain">
             <div class="container">
                 <div style="width: 100%; height: 450px; overflow: hidden; position: relative; background-color: red;">
-                    <img src="Assets/javascript.png" style="width: 100%; position: absolute;"/>
+                    <img src="Assets/kapal.jpg" style="width: 100%; position: absolute;"/>
                 </div>
                 <div class="containerTwo">
                     <p style="margin-bottom: 0px; margin-top: 0px;"><strong>Duration</strong></p>
@@ -53,7 +53,7 @@
                     </div>
                     <p style="margin-bottom: 0px;"><strong>Overview</strong></p>
                     <div style="margin-top: 10px; width: 100%; height: 160px; overflow: hidden; position: relative; display: flex; justify-content: flex-start;">
-                        <img src="Assets/javascript.png" style="max-width: 100%; height: 100%; position: absolute;"/>
+                        <img src="Assets/kapal.jpg" style="max-width: 100%; height: 100%; position: absolute;"/>
                     </div>
                 </div>
             </div>
