--- a/addproject.html
+++ b/addproject.html
@@ -30,7 +30,7 @@
     <section>
         <div class="input">
             <form onsubmit="submitData(event)">
-                <h1>ADD MY PROJECT</h1>
+                <p style="font-size: 30px; text-align: center; font-weight: bold; padding-top: 10px;">ADD MY PROJECT</p>
                 <div class="inputName">
                     <label for="inputName">Project Name</label>
                     <input type="text" id="inputName">
