--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     <section>
         <div class="input">
             <form>
-                <h1>GET IN TOUCH</h1>
+                <p style="font-size: 30px; text-align: center; font-weight: bold; padding-top: 10px;">GET IN TOUCH</p>
                 <div>
                     <label for="inputName">Name</label>
                     <input type="text" id="inputName" required>
